--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="login">Login</string>
     <string name="forget_password">Forget Password?</string>
     <string name="new_user_ragister_here">New User/<font color="#000000">Register Here  </font> </string>
+    <string name="already_user_login_here">Already User/<font color="#000000">Login Here</font></string>
+    <string name="sign_up">Sign Up</string>
+    <string name="enter_your_name">Enter Your Name</string>
 </resources>
